--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "image-converter",
+  "author": "Wemerson Nicacio",
   "version": "1.0.0",
   "description": "API e frontend para converter imagens entre formatos",
   "main": "backend/server.js",
   "type": "module",
   "scripts": {
-  "start": "node backend/server.js",
-  "dev": "nodemon backend/server.js"
+    "start": "node backend/server.js",
+    "dev": "nodemon backend/server.js"
   },
   "dependencies": {
+    "archiver": "^7.0.1",
     "express": "^5.1.0",
     "multer": "^2.0.2",
     "pdfkit": "^0.17.2",
+    "potrace": "^2.1.8",
     "sharp": "^0.34.4",
     "svg2img": "^1.0.0-beta.2"
   }
